--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <meta charset="UTF-8">
     <title>Random insults generator</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
