Change analytics stream

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZVV1K8EBTC"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9ERLN0J6H"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
-      gtag('config', 'G-ZVV1K8EBTC');
+      gtag('config', 'G-M9ERLN0J6H');
     </script>
 
     <meta charset="UTF-8">
