--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       gtag('js', new Date());
       gtag('config', 'G-M9ERLN0J6H');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5990352711022043"
+     crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
     <title>Random insults generator</title>
